--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,14 +16,14 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="309dp"
+            android:layout_height="185dp"
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
             android:src="@drawable/elesson" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="128dp"
             android:layout_margin="5dp"
             android:layout_marginTop="5dp"
             android:gravity="center"
@@ -35,7 +35,9 @@
                 android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -43,8 +45,9 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/Mapel"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/mapel" />
 
                     <TextView
@@ -52,7 +55,8 @@
                         android:layout_height="37dp"
                         android:gravity="center"
                         android:text="Mata Pelajaran"
-                        android:textAlignment="center"/>
+                        android:textAlignment="center" />
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -63,7 +67,9 @@
                 android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -71,15 +77,16 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/Materi"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/buku" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="37dp"
                         android:gravity="center"
-                        android:text="materi" />
+                        android:text="Materi" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -89,7 +96,9 @@
                 android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -97,8 +106,9 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/kelas"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/kelas" />
 
                     <TextView
@@ -107,6 +117,8 @@
                         android:gravity="center"
                         android:text="Kelas" />
 
+
+
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -114,7 +126,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="122dp"
             android:layout_margin="5dp"
             android:layout_marginTop="5dp"
             android:gravity="center"
@@ -123,10 +135,12 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -134,25 +148,28 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/Account"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/akun" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="37dp"
                         android:gravity="center"
-                        android:text="account" />
+                        android:text="Account" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -160,8 +177,9 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/Setting"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/setting" />
 
                     <TextView
@@ -169,17 +187,18 @@
                         android:layout_height="37dp"
                         android:gravity="center"
                         android:text="Setting" />
-
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp">
+                app:contentPadding="10dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -187,8 +206,9 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/Nilai"
                         android:layout_width="match_parent"
-                        android:layout_height="73dp"
+                        android:layout_height="62dp"
                         android:src="@mipmap/nilai" />
 
                     <TextView
@@ -196,9 +216,11 @@
                         android:layout_height="37dp"
                         android:gravity="center"
                         android:text="Nilai" />
-
                 </LinearLayout>
+
             </androidx.cardview.widget.CardView>
+
+
 
         </LinearLayout>
 
