--- a/app/src/main/res/layout/activity_kelas.xml
+++ b/app/src/main/res/layout/activity_kelas.xml
@@ -4,39 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".KelasActivity">
-
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tabelayoutid"
-        android:layout_marginTop="10dp">
-        <TableRow
-            android:id="@+id/rowlay"
-            android:background="@android:color/holo_blue_light"
-            android:padding="5dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="No"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Nama Anggota"/>
-
-        </TableRow>
-
-    </TableLayout>
-
-
+    android:layout_height="match_parent">
 
 
 </RelativeLayout>
