--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -33,11 +33,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -63,11 +63,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -92,11 +92,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -132,11 +132,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -161,11 +161,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -190,11 +190,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:cardPreventCornerOverlap="true"
                 app:cardUseCompatPadding="true"
-                app:contentPadding="10dp"
-                android:clickable="true"
-                android:foreground="?android:attr/selectableItemBackground">
+                app:contentPadding="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -219,4 +219,3 @@
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
