--- a/app/src/main/res/layout/activity_materi.xml
+++ b/app/src/main/res/layout/activity_materi.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvKelas"
+        android:id="@+id/rvMateri"
         android:layout_width="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
